--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
-    <p> blank :3 still making it :3</p>
+    <header>Hi I'm Blnch315, The Guild Refiner of Brotherhood of Outcast</header>
+    <div class="intro">
+        This website contains the information on how to refine from 0 to S.<br>
+        I will also share my trick on refining B-S with my full research on how I came up with that trick.
+    </div>
+    <div class=""></dib>
 </body>
 </html>
