--- a/index.html
+++ b/index.html
@@ -6,13 +6,35 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
+<header>Hi I'm Blnch315, The Guild Refiner of Brotherhood of Outcast</header>
 <body>
-    <header>Hi I'm Blnch315, The Guild Refiner of Brotherhood of Outcast</header>
     <div class="intro">
         This website contains the information on how to refine from 0 to S.<br>
         I will also share my trick on refining B-S with my full research on how I came up with that trick.
     </div>
-    <div class=""></dib>
+    <div id="quicklink">
+        <a class="quicklink" href="#RefOB">
+            Refining 0-B
+        </a>
+    </div>
+    <div id="RefOB">
+        <h2>Refining 0-B</h2>
+        <p>
+            In refining 0-B, the cheapest way to refine is by:<br>
+            1.) Using Mithril Ore from 0-E;<br>
+            2.) Then Mithril Ore with Anti-Degradation for E-C; <br>
+            3.) Next refine to C-B using Orichalcum and Anti-Degradation.<br>
+
+            Mithril Ore can be farmed at Ultimea: Southeast, the Underground Nemicos are the mob for the drop<br>
+            Orichalcums can be bought at General Stores for 16,000 spina per piece quite pricey.
+        </p>
+        <h3>Q: Isn't it more cheaper if I refine with Orichalcum from D-B instead of Mithril Ore?</h3>
+        <p>A: It is not, the Orichalcum might do higher success rate starting from D-B. 
+            But 1 refine of Orichalcum with Anti-Degradation is almost the same as refining 5 Mithril Ore with Anti-Degradation.
+            The stakes of refining with Mithril Ore with Anti-Degradation is more favorable cause it is also likely for Orichalcum to fail
+            even though the success rate is higher. It is better to fail in refining with Mithril Ores, than with Orichalcums.</p>
+    </div>
 </body>
-</html>
+</html>     
