--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     Refining 0-S RNG Battle
 </title>
 <head>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <header>Hi I'm Blnch315, The Guild Refiner of Brotherhood of Outcast</header>
@@ -34,7 +34,11 @@
         <p>A: It is not, the Orichalcum might do higher success rate starting from D-B. 
             But 1 refine of Orichalcum with Anti-Degradation is almost the same as refining 5 Mithril Ore with Anti-Degradation.
             The stakes of refining with Mithril Ore with Anti-Degradation is more favorable cause it is also likely for Orichalcum to fail
-            even though the success rate is higher. It is better to fail in refining with Mithril Ores, than with Orichalcums.</p>
+            even though the success rate is higher. It is better to fail in refining with Mithril Ores, than with Orichalcums.
+        </p>
+        <a class="quicklink" href="#quicklink">
+            Up
+        </a>
     </div>
 </body>
 </html>     
