--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div id="RefOB">
         <h2>Refining 0-B</h2>
         <p>
-            In refining 0-B, the cheapest way to refine is by:<br>
+            <h3>In refining 0-B you'll need a full Tech character to have the maximum success rate and maxed the level of all refining skills, the cheapest way to refine is by:</h3>
             1.) Using Mithril Ore from 0-E;<br>
             2.) Then Mithril Ore with Anti-Degradation for E-C; <br>
             3.) Next refine to C-B using Orichalcum and Anti-Degradation.<br>
 
-            Mithril Ore can be farmed at Ultimea: Southeast, the Underground Nemicos are the mob for the drop<br>
+            Mithril Ore can be farmed at Ultimea: Southeast, the Underground Nemicos are the mob for the drop.<br>
             Orichalcums can be bought at General Stores for 16,000 spina per piece quite pricey.
         </p>
         <h3>Q: Isn't it more cheaper if I refine with Orichalcum from D-B instead of Mithril Ore?</h3>
@@ -39,6 +39,23 @@
         <a class="quicklink" href="#quicklink">
             Up
         </a>
+    </div>
+    <div>
+        <h2>Refining B-S</h2>
+        <p>
+            In refining B-S your character must have full luck 255, and you only need Lv 1 Refiner Skill. 
+            The success rates of refining from B-S are the same whatever the level,
+             there are a few things that are important to know. <br>
+            <h3>1.) Weapon must be not slotted</h3>
+            <h4>Q: Is it possible to refine 1 Slotted and 2 Slotted weapons from B-S?</h4>
+            <p>A: Yes it is possible, the degradation chances are the same for whatever weapons, but the rank of degradation is different</p>
+            Non-slotted weapons can only degrade with a maximum of 1 rank. (ex. from 3 to 2)<br>
+            1 Slotted weapons can degrade with a maximum of 2 ranks. (ex. from 3 to 1)<br>
+            2 Slotted weapons can degrade with a maximum of 3 ranks. (ex. from 3 to 0)<br><br>
+
+
+
+        </p>
     </div>
 </body>
 </html>     
