--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
         This website contains the information on how to refine from 0 to S.<br>
         I will also share my trick on refining B-S with my full research on how I came up with that trick.
     </div>
-    <div id="quicklink">
-        <a class="quicklink" href="#RefOB">
+    <div id="quicklink" class="row">
+        <a class="quicklink col-4" href="#RefOB">
             Refining 0-B
+        </a>
+        <a class="quicklink col-4" href="#RefBS">
+            Refining B-S
+        </a>
+        <a class="quicklink col-4" href="#RefAd">
+            The Battle Between You and RNG
         </a>
     </div>
     <div id="RefOB">
@@ -40,22 +46,39 @@
             Up
         </a>
     </div>
-    <div>
+    <div id="RefBS">
         <h2>Refining B-S</h2>
         <p>
-            In refining B-S your character must have full luck 255, and you only need Lv 1 Refiner Skill. 
-            The success rates of refining from B-S are the same whatever the level,
-             there are a few things that are important to know. <br>
-            <h3>1.) Weapon must be not slotted</h3>
+            In refining B-S your character must have full luck 255, and you only need Lv 1 Refiner Skill.<br>
+            You can use different refining materials since the success rate is always the same ranging from hematite ore to orichalcum.<br>
+            I recommend using mithril ore with anti-degradation throughout the whole process of refining, cause it is currently the cheapest and the easiest refining material to farm.<br>
+            There are a few things that are important to know. <br>
+            <h3>1.) Weapon must be non-slotted</h3>
             <h4>Q: Is it possible to refine 1 Slotted and 2 Slotted weapons from B-S?</h4>
             <p>A: Yes it is possible, the degradation chances are the same for whatever weapons, but the rank of degradation is different</p>
             Non-slotted weapons can only degrade with a maximum of 1 rank. (ex. from 3 to 2)<br>
             1 Slotted weapons can degrade with a maximum of 2 ranks. (ex. from 3 to 1)<br>
             2 Slotted weapons can degrade with a maximum of 3 ranks. (ex. from 3 to 0)<br><br>
 
-
-
+            It would be annoying to refine higher slotted weapons and might cost you more than you think.<br>
+            Estimatedly, you might end up spending 7M spina for +S 1 slotted, and 10M spina for +S 2 slotted, or worst more than that.<br>
+            It would be mathematically cheaper to just start refining from non-slotted, then buy piercers from players.
+            <h3>2.) Luck doesn't increase success rate</h3>
+            Luck increases the anti-degradation rate by a lot and not the success rate. It is said that with the use of Anti-Degradation(75%), the rate with pure luck character will rise up to 99%
+            <h3>3.) 99% is not 100%</h3>
+            Even though anti-degradation rate is 99%, degradation will still happen more often than successul +S refine. I've read that the success rate for +A and +S are both 0.001%
+            which means that it's normal to have more degradation than success.
         </p>
+        <a class="quicklink" href="#quicklink">
+            Up
+        </a>
+    </div>
+    <div id="RefAd">
+        <h2>The Battle Between You and RNG</h2>
+
+        <a class="quicklink" href="#quicklink">
+            Up
+        </a>
     </div>
 </body>
 </html>     
