--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             Using the same 7 second interval per refine method. I ended up using 6 stacks of Anti-Degradation, 4 stacks before I sleep, 2 stacks after I woke up. It was a bad result to be honest.
             <h3>Test 3</h3>
             With the same method, I only used 2 stacks of Anti-Degradation again. But this time I only used 1 stack first, then after 4 hours, I succeeded with the other stack. This led me to a conclusion that;
-            <h3>The Hour clock is also a part of RNG, and impacts the results harshly.</h3>
+            <h3 style="color: red;">The Hour clock is also a part of RNG, and impacts the results harshly.</h3>
             <h3>Test 4</h3>
             I used 1 stack of Anti-Degradation only :3, cause I refined the same hour that Test 3 succeeded.
         <p>
@@ -128,7 +128,7 @@
             4.) Patience is the key. Time is gold, and more time will give you more gold... YUMM :3
         </p>
             <h2>Dumping Myths</h2>
-            1.) Place of refine doesn't matter there is no need to change places, you only need a place that is not laggy :3. You can do it in a laggy place but thats pretty annoying, results will still be the same.
+            1.) Place of refine doesn't matter there is no need to change places, you only need a place that is not laggy :3. You can do it in a laggy place but thats pretty annoying, results will still be the same.<br>
             2.) Refining with different refine materials doesn't matter. As a programmer, assigning different values in different refining materials is not really significant when refining B-S.<br>
         <a class="quicklink" href="#quicklink">
             Up
