--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         This website contains the information on how to refine from 0 to S.<br>
         I will also share my trick on refining B-S with my full research on how I came up with that trick.
     </div>
-    <div id="quicklink" class="row">
+    <div id="quicklink1" class="row">
         <a class="quicklink col-4" href="#RefOB">
             Refining 0-B
         </a>
@@ -23,6 +23,17 @@
         </a>
         <a class="quicklink col-4" href="#RefAd">
             The Battle Between You and RNG
+        </a>
+    </div>
+    <div id="quicklink2" class="row">
+        <a class="quicklink col-4" href="#EaC">
+            Experimentation and Conclusion
+        </a>
+        <a class="quicklink col-4" href="#trick">
+            The Trick
+        </a>
+        <a class="quicklink col-4" href="#dump">
+            Dumping Myths
         </a>
     </div>
     <div id="RefOB">
@@ -104,7 +115,7 @@
             The answer is by refining using prime numbers that will end up in different "ones" digit as your interval in seconds. The numbers are 3, 7, 9, and 13.
             3 seconds is too fast, and it may result in insignificantly close result that may cause consecutive failure to refine.
         </p>
-        <h2>Experimentation and Conclusion</h2>
+        <h2 id="EaC">Experimentation and Conclusion</h2>
         I'm still currently on the way of making the cheapest trick to refining +S. Currently on test 5 with it, and below are the results of Test 1 to 4
         <p>
             <h3>The lucky magic number is 7</h3>
@@ -120,14 +131,14 @@
             <h3>Test 4</h3>
             I used 1 stack of Anti-Degradation only :3, cause I refined the same hour that Test 3 succeeded.
         <p>
-            <h2>The Trick (Unofficial)</h2>
+            <h2 id="trick">The Trick (Unofficial)</h2>
             The trick for refining B-S is:<br>
             1.) Refine in 7 seconds interval;<br>
             2.) Only use 1 stack of Anti-Degradation per session of refining; <br>
             3.) The interval of each sessions must be 2-4 hours; <br>
             4.) Patience is the key. Time is gold, and more time will give you more gold... YUMM :3
         </p>
-            <h2>Dumping Myths</h2>
+            <h2 id="dump">Dumping Myths</h2>
             1.) Place of refine doesn't matter there is no need to change places, you only need a place that is not laggy :3. You can do it in a laggy place but thats pretty annoying, results will still be the same.<br>
             2.) Refining with different refine materials doesn't matter. As a programmer, assigning different values in different refining materials is not really significant when refining B-S.<br>
         <a class="quicklink" href="#quicklink">
