--- a/index.html
+++ b/index.html
@@ -15,26 +15,34 @@
         I will also share my trick on refining B-S with my full research on how I came up with that trick.
     </div>
     <div id="quicklink1" class="row">
-        <a class="quicklink col-4" href="#RefOB">
+        <div class="col-1"></div>
+        <a class="quicklink col-2" href="#RefOB">
             Refining 0-B
         </a>
-        <a class="quicklink col-4" href="#RefBS">
+        <div class="col-2"></div>
+        <a class="quicklink col-2" href="#RefBS">
             Refining B-S
         </a>
-        <a class="quicklink col-4" href="#RefAd">
+        <div class="col-2"></div>
+        <a class="quicklink col-2" href="#RefAd">
             The Battle Between You and RNG
         </a>
+        <div class="col-1"></div>
     </div>
     <div id="quicklink2" class="row">
-        <a class="quicklink col-4" href="#EaC">
+        <div class="col-1"></div>
+        <a class="quicklink col-2" href="#EaC">
             Experimentation and Conclusion
         </a>
-        <a class="quicklink col-4" href="#trick">
+        <div class="col-2"></div>
+        <a class="quicklink col-2" href="#trick">
             The Trick
         </a>
-        <a class="quicklink col-4" href="#dump">
+        <div class="col-2"></div>
+        <a class="quicklink col-2" href="#dump">
             Dumping Myths
         </a>
+        <div class="col-1"></div>
     </div>
     <div id="RefOB">
         <h2>Refining 0-B</h2>
@@ -53,7 +61,7 @@
             The stakes of refining with Mithril Ore with Anti-Degradation is more favorable cause it is also likely for Orichalcum to fail
             even though the success rate is higher. It is better to fail in refining with Mithril Ores, than with Orichalcums.
         </p>
-        <a class="quicklink" href="#quicklink">
+        <a class="quicklink" href="#quicklink1">
             Up
         </a>
     </div>
@@ -80,7 +88,7 @@
             Even though anti-degradation rate is 99%, degradation will still happen more often than successul +S refine. I've read that the success rate for +A and +S are both 0.001%
             which means that it's normal to have more degradation than success.
         </p>
-        <a class="quicklink" href="#quicklink">
+        <a class="quicklink" href="#quicklink1">
             Up
         </a>
     </div>
@@ -141,7 +149,7 @@
             <h2 id="dump">Dumping Myths</h2>
             1.) Place of refine doesn't matter there is no need to change places, you only need a place that is not laggy :3. You can do it in a laggy place but thats pretty annoying, results will still be the same.<br>
             2.) Refining with different refine materials doesn't matter. As a programmer, assigning different values in different refining materials is not really significant when refining B-S.<br>
-        <a class="quicklink" href="#quicklink">
+        <a class="quicklink" href="#quicklink1">
             Up
         </a>
     </div>
