--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
     </div>
     <div id="quicklink1" class="row">
         <div class="col-1"></div>
-        <a class="quicklink ql1 col-2" href="#RefOB">
+        <a class="quicklink ql1 col-12 col-md-2" href="#RefOB">
             Refining 0-B
         </a>
         <div class="col-2"></div>
-        <a class="quicklink ql1 col-2" href="#RefBS">
+        <a class="quicklink ql1 col-12 col-md-2" href="#RefBS">
             Refining B-S
         </a>
         <div class="col-2"></div>
-        <a class="quicklink ql1 col-2" href="#RefAd">
+        <a class="quicklink ql1 col-12 col-md-2" href="#RefAd">
             The Battle Between You and RNG
         </a>
         <div class="col-1"></div>
     </div>
     <div id="quicklink2" class="row">
         <div class="col-1"></div>
-        <a class="quicklink ql2 col-2" href="#EaC">
+        <a class="quicklink ql2 col-12 col-md-2" href="#EaC">
             Experimentation and Conclusion
         </a>
         <div class="col-2"></div>
-        <a class="quicklink ql2 col-2" href="#trick">
+        <a class="quicklink ql2 col-12 col-md-2" href="#trick">
             The Trick
         </a>
         <div class="col-2"></div>
-        <a class="quicklink ql2 col-2" href="#dump">
+        <a class="quicklink ql2 col-12 col-md-2" href="#dump">
             Dumping Myths
         </a>
         <div class="col-1"></div>
