--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p>
             <h3>What is RNG(Random Number Generator)?</h3>
             RNG is a random number that is made to be used to dictate the outcome of a certain situation.<br>
-            in exampple, if the range of RNG is from 0 to 9, and you have 60% success rate. The developer could assign numbers 0 to 5(6 numbers) as your success outcome, and 6 to 9 (4 numbers) as your fail outcome.
+            in example, if the range of RNG is from 0 to 9, and you have 60% success rate. The developer could assign numbers 0 to 5(6 numbers) as your success outcome, and 6 to 9 (4 numbers) as your fail outcome.
             If the input number gave an outcome of 4, then your situation is a success. But if its 8, then your situation is a failure.
         </p>
         <p>
