--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </p>
         <p>
             <h3>Is RNG really random?</h3>
-            For MMORPG and other games. The answer is a big "NO". The RNG programs used in games is called "PRNG" (Psuedo-Random Number Generator)
+            For MMORPG and other games. The answer is a big "NO". The RNG program used in games is called "PRNG" (Psuedo-Random Number Generator)
             PRNGs are formulas made to copy the scenario of being random, they're not totally random at all.
         </p>
         <p>
