--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             <h3 style="color: red;">The Hour clock is also a part of RNG, and impacts the results harshly.</h3>
             <h3>Test 4</h3>
             I used 1 stack of Anti-Degradation only :3, cause I refined the same hour that Test 3 succeeded.
+            <h3>Test 5</h3>
+            I used around 60+ pieces of Anti-Degradation at first, I ended up at +A refine. I decided to just buy another stack, and end up successfully after 50 tries.
+            <h3>Test 6 Commencing</h3>
         <p>
             <h2 id="trick">The Trick (Unofficial)</h2>
             The trick for refining B-S is:<br>
