--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
             I used 1 stack of Anti-Degradation only :3, cause I refined the same hour that Test 3 succeeded.
             <h3>Test 5</h3>
             I used around 60+ pieces of Anti-Degradation at first, I ended up at +A refine. I decided to just buy another stack, and end up successfully after 50 tries.
-            <h3>Test 6 Commencing</h3>
+            <h3>Test 6</h3>
+            I ended up using 4 stacks of Anti-Degradation on September 12,2020 this led me to the conclusion;
+            <h3 style="color: red;">The "DATE" is also a part of RNG, and impacts the results harshly.</h3>
+            so after a day, I only used 1 stack of Anti-Degradation and I did +S successfully.
+            <h3>Test 7</h3>
+            Works well, I ended up using 3 stacks of Anti-Degradation. It was a good refine. :3 
+            <h3>Test 8 Commencing</h3>
         <p>
             <h2 id="trick">The Trick (Unofficial)</h2>
             The trick for refining B-S is:<br>
@@ -148,6 +154,7 @@
             2.) Only use 1 stack of Anti-Degradation per session of refining; <br>
             3.) The interval of each sessions must be 2-4 hours; <br>
             4.) Patience is the key. Time is gold, and more time will give you more gold... YUMM :3
+            5.) If you used 3 stacks or more of Anti-Degradation, consider refining in the next day.
         </p>
             <h2 id="dump">Dumping Myths</h2>
             1.) Place of refine doesn't matter there is no need to change places, you only need a place that is not laggy :3. You can do it in a laggy place but thats pretty annoying, results will still be the same.<br>
