--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
             Using the same 7 second interval per refine method. I ended up using 6 stacks of Anti-Degradation, 4 stacks before I sleep, 2 stacks after I woke up. It was a bad result to be honest.
             <h3>Test 3</h3>
             With the same method, I only used 2 stacks of Anti-Degradation again. But this time I only used 1 stack first, then after 4 hours, I succeeded with the other stack. This led me to a conclusion that;
-            <h3 style="color: red;">The Hour clock is also a part of RNG, and impacts the results harshly.</h3>
+            <h3 style="color: red;">The Hour clock is also a part of RNG, and impacts the results harshly.(Added trick No.3)</h3>
             <h3>Test 4</h3>
             I used 1 stack of Anti-Degradation only :3, cause I refined the same hour that Test 3 succeeded.
             <h3>Test 5</h3>
             I used around 60+ pieces of Anti-Degradation at first, I ended up at +A refine. I decided to just buy another stack, and end up successfully after 50 tries.
             <h3>Test 6</h3>
             I ended up using 4 stacks of Anti-Degradation on September 12,2020 this led me to the conclusion;
-            <h3 style="color: red;">The "DATE" is also a part of RNG, and impacts the results harshly.</h3>
+            <h3 style="color: red;">The "DATE" is also a part of RNG, and impacts the results harshly.(Added trick No.5)</h3>
             so after a day, I only used 1 stack of Anti-Degradation and I did +S successfully.
             <h3>Test 7</h3>
             Works well, I ended up using 3 stacks of Anti-Degradation. It was a good refine. :3 
