--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
             so after a day, I only used 1 stack of Anti-Degradation and I did +S successfully.
             <h3>Test 7</h3>
             Works well, I ended up using 3 stacks of Anti-Degradation. It was a good refine. :3 
-            <h3>Test 8 Commencing</h3>
+            <h3>Test 8</h3>
+            Also worked well, I used 2 stacks only :3
         <p>
             <h2 id="trick">The Trick (Unofficial)</h2>
             The trick for refining B-S is:<br>
