--- a/index.html
+++ b/index.html
@@ -163,6 +163,19 @@
         <a class="quicklink" href="#quicklink1">
             Up
         </a>
+            <h2 id="fin">Further Test</h2>
+            This is a list of transcript of my test on every equipment that I will refine to +S after Test 10. This is to show the successfulness of each experiment.
+            The said test would have inventory list that will determine my profit on each weapon.
+            <p style="color:red;">Red means its a loss.</p>
+            <p style="color:green;">Green means its a gain.</p>
+            <p style="color: blue;">Blue on Test number means it is sold.</p>
+            <h3>Test 1(Test 10 is not done)</h3>
+            Weapon Information: <br>
+            Weapon Cost: <br>
+            Material Cost: <br>
+            Weapon Price when +S: <br>
+            --------------------------<br>
+            Profit: <br>
     </div>
 </body>
 </html>     
