--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             1.) Refine in 7 seconds interval;<br>
             2.) Only use 1 stack of Anti-Degradation per session of refining; <br>
             3.) The interval of each sessions must be 2-4 hours; <br>
-            4.) Patience is the key. Time is gold, and more time will give you more gold... YUMM :3
+            4.) Patience is the key. Time is gold, and more time will give you more gold... YUMM :3<br>
             5.) If you used 3 stacks or more of Anti-Degradation, consider refining in the next day.
         </p>
             <h2 id="dump">Dumping Myths</h2>
@@ -176,6 +176,9 @@
             Weapon Price when +S: <br>
             --------------------------<br>
             Profit: <br>
+            <a class="quicklink" href="#quicklink1">
+                Up
+            </a>
     </div>
 </body>
 </html>     
