--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
             Up
         </a>
             <h2 id="fin">Further Test</h2>
-            This is a list of transcript of my test on every equipment that I will refine to +S after Test 10. This is to show the successfulness of each experiment.
-            The said test would have inventory list that will determine my profit on each weapon.
+            This is transcript of my test on every equipment that I will refine to +S after Test 10. This is to show the successfulness of each experiment.
+            The said test would have inventory list that will determine my profit on each weapon and how I wil adjust the price depending on economic demand.
             <p style="color:red;">Red means its a loss.</p>
             <p style="color:green;">Green means its a gain.</p>
             <p style="color: blue;">Blue on Test number means it is sold.</p>
@@ -176,6 +176,7 @@
             Weapon Price when +S: <br>
             --------------------------<br>
             Profit: <br>
+            <br>
             <a class="quicklink" href="#quicklink1">
                 Up
             </a>
