--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
             Works well, I ended up using 3 stacks of Anti-Degradation. It was a good refine. :3 
             <h3>Test 8</h3>
             Also worked well, I used 2 stacks only :3
+            <h3>Test 9</h3>
+            Used 3 stacks of Anti-Degradation, still using the trick.
         <p>
             <h2 id="trick">The Trick (Unofficial)</h2>
             The trick for refining B-S is:<br>
